--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -25,7 +25,7 @@
 
 .post-content {
     margin: 16px 0;
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -37,7 +37,46 @@
 }
 
 .post-content h2 {
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: 1px;
     margin: 16px 0;
+}
+
+.post-content h3 {
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin: 12px 0;
+}
+
+.post-content h4 {
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin: 10px 0;
+}
+
+.post-content h5 {
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin: 8px 0;
+}
+
+.post-content h6 {
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    margin: 6px 0;
+}
+
+.post-content img {
+    width: 100%;
+    height: 400px;
+    border-radius: 5px;
+    margin: 10px 0;
+    object-fit: cover;
 }
 
 .post-buttons {
