Added some responsivness

--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -3,7 +3,7 @@
   width: 100%;
   align-items: center;
   justify-content: center;
-  height: 400px;
+  height: 85vh;
 }
 
 @keyframes ldio-yzaezf3dcmj {
